--- a/html/masters-page/masters.html
+++ b/html/masters-page/masters.html
@@ -14,7 +14,9 @@
     <title>Мастера</title>
 </head>
 <body class="page">
-    <header class="header">
+    <div class="overlay"></div>
+    <div class="overlay-content">
+        <header class="header">
         <div class="header__bar">
             <div class="header__bar-opener">
                 <div class="header__bar-button" aria-hidden="true">
@@ -274,6 +276,7 @@
         <div class="link-type-button-container">
             <a href="../services-page/services.html" class="popup__link link-type-button link-type-button--transparent">Прайс</a>
         </div>
+    </div>
     </div>
     <script src="../../scripts/modal.js"></script>
     <script src="../../scripts/headerBar.js"></script>
