--- a/html/sign-up-page/sign-up.html
+++ b/html/sign-up-page/sign-up.html
@@ -32,60 +32,63 @@
             <a href="../authorization-pages/login.html" class="header__login link">Войти</a>
         </div>
     </div>
-    <header class="header">
-        <div class="header__cover">
-            <div class="header__cover-title-container">
-                <p class="header__cover-label">Записаться в салон красоты</p>
-                <h1 class="header__cover-title">Евразель</h1>
+    <div class="overlay"></div>
+    <div class="overlay-content">
+        <header class="header">
+            <div class="header__cover">
+                <div class="header__cover-title-container">
+                    <p class="header__cover-label">Записаться в салон красоты</p>
+                    <h1 class="header__cover-title">Евразель</h1>
+                </div>
+                <div class="header__form-container">
+                    <form class="header__form" autocomplete="off">
+                        <!-- <label for="services" class="header__form__label">Выберите услугу</label>
+                        <div class="header__form__select-container">
+                            <select id="services" required class="header__form__select">
+                                <option value="" class="header__form__option">-- --</option>
+                                <option value="haircut" class="header__form__option">Стрижка</option>
+                                <option value="coloring" class="header__form__option">Окраска</option>
+                                <option value="manicure" class="header__form__option">Маникюр / педикюр</option>
+                                <option value="styling" class="header__form__option">Укладка</option>
+                                <option value="care" class="header__form__option">Уход для волос</option>
+                                <option value="makeup" class="header__form__option">Макияж</option>
+                            </select>
+                        </div> -->
+                        <label for="tel" class="header__form__label">Оставьте свой номер и мы вам перезвоним!</label>
+                        <input type="tel" id="tel" class="header__form__input" placeholder="+7 (999) 999-99-99" pattern="\d{11}" required>
+                        <button type="submit" class="header__form__button link-type-button link-type-button--black">Отправить</button>
+                    </form>
+                </div>
             </div>
-            <div class="header__form-container">
-                <form class="header__form" autocomplete="off">
-                    <!-- <label for="services" class="header__form__label">Выберите услугу</label>
-                    <div class="header__form__select-container">
-                        <select id="services" required class="header__form__select">
-                            <option value="" class="header__form__option">-- --</option>
-                            <option value="haircut" class="header__form__option">Стрижка</option>
-                            <option value="coloring" class="header__form__option">Окраска</option>
-                            <option value="manicure" class="header__form__option">Маникюр / педикюр</option>
-                            <option value="styling" class="header__form__option">Укладка</option>
-                            <option value="care" class="header__form__option">Уход для волос</option>
-                            <option value="makeup" class="header__form__option">Макияж</option>
-                        </select>
-                    </div> -->
-                    <label for="tel" class="header__form__label">Оставьте свой номер и мы вам перезвоним!</label>
-                    <input type="tel" id="tel" class="header__form__input" placeholder="+7 (999) 999-99-99" pattern="\d{11}" required>
-                    <button type="submit" class="header__form__button link-type-button link-type-button--black">Отправить</button>
-                </form>
+        </header>
+        <footer class="footer">
+            <address class="footer__addres">
+                <a href="#" class="footer__addres-link link">EvrAzEl@gmail.com</a>
+                <a href="#" class="footer__addres-link link">+ 7 (927) 77-77-777</a>
+                <a href="#" class="footer__addres-link link">Самарская обл., г. Тольятти, ул. XXXXXX, д.X</a>
+            </address>
+            <div class="footer__author">
+                <p>Эльман Магеррамов</p>
+                <p>©2024</p>
             </div>
-        </div>
-    </header>
-    <footer class="footer">
-        <address class="footer__addres">
-            <a href="#" class="footer__addres-link link">EvrAzEl@gmail.com</a>
-            <a href="#" class="footer__addres-link link">+ 7 (927) 77-77-777</a>
-            <a href="#" class="footer__addres-link link">Самарская обл., г. Тольятти, ул. XXXXXX, д.X</a>
-        </address>
-        <div class="footer__author">
-            <p>Эльман Магеррамов</p>
-            <p>©2024</p>
-        </div>
-        <ul class="footer__social-list">
-            <li class="footer__social-item">
-                <a href="#" class="footer__social-link">
-                    <img src="../../images/vk.svg" alt="Ссылка на страницу Вконтакте" class="footer__social-item-logo">
-                </a>
-            </li>
-            <li class="footer__social-item">
-                <a href="#" class="footer__social-link">
-                    <img src="../../images/yt.svg" alt="Ссылка на YouTube-канал" class="footer__social-item-logo">
-                </a>
-            </li>
-            <li class="footer__social-item">
-                <a href="#" class="footer__social-link">
-                    <img src="../../images/pinterest.svg" alt="Ссылка на аккаунт Pinterest" class="footer__social-item-logo">
-                </a>
-            </li>
-        </ul>
-    </footer>
+            <ul class="footer__social-list">
+                <li class="footer__social-item">
+                    <a href="#" class="footer__social-link">
+                        <img src="../../images/vk.svg" alt="Ссылка на страницу Вконтакте" class="footer__social-item-logo">
+                    </a>
+                </li>
+                <li class="footer__social-item">
+                    <a href="#" class="footer__social-link">
+                        <img src="../../images/yt.svg" alt="Ссылка на YouTube-канал" class="footer__social-item-logo">
+                    </a>
+                </li>
+                <li class="footer__social-item">
+                    <a href="#" class="footer__social-link">
+                        <img src="../../images/pinterest.svg" alt="Ссылка на аккаунт Pinterest" class="footer__social-item-logo">
+                    </a>
+                </li>
+            </ul>
+        </footer>
+    </div>
     <script src="../../scripts/headerBar.js"></script>
 </body>
