--- a/html/authorization-pages/registration.html
+++ b/html/authorization-pages/registration.html
@@ -11,27 +11,30 @@
     <title>Регистрация</title>
 </head>
 <body class="page">
-    <article class="window">
-        <h1 class="title">Регистрация</h1>
-        <form class="form" method="post" autocomplete="off">
-            <label class="input-label">
-                <span>Имя</span>
-                <input class="input" type="text" required placeholder="Введите имя">
-            </label>
-            <label class="input-label">
-                <span>Логин</span>
-                <input class="input" type="email" required placeholder="Придумайте логин">
-            </label>
-            <label class="input-label">
-                <span>Пароль</span>
-                <input class="input" type="password" required placeholder="Придумайте пароль" minlength="8">
-            </label>
-            <button class="button" type="submit">Войти</button>
-        </form>
-        <div class="redirect">
-            <p>Уже есть аккаунт?</p>
-            <a href="./login.html">Войти</a>
-        </div>
-    </article>
+    <div class="overlay"></div>
+    <div class="overlay-content authorization-window">
+        <article class="window">
+            <h1 class="title">Регистрация</h1>
+            <form class="form" method="post" autocomplete="off">
+                <label class="input-label">
+                    <span>Имя</span>
+                    <input class="input" type="text" required placeholder="Введите имя">
+                </label>
+                <label class="input-label">
+                    <span>Логин</span>
+                    <input class="input" type="email" required placeholder="Придумайте логин">
+                </label>
+                <label class="input-label">
+                    <span>Пароль</span>
+                    <input class="input" type="password" required placeholder="Придумайте пароль" minlength="8">
+                </label>
+                <button class="button" type="submit">Войти</button>
+            </form>
+            <div class="redirect">
+                <p>Уже есть аккаунт?</p>
+                <a href="./login.html">Войти</a>
+            </div>
+        </article>
+    </div>
 </body>
 </html>
