--- a/html/masters-page/masters.html
+++ b/html/masters-page/masters.html
@@ -30,7 +30,7 @@
                 <a href="#" class="header__navigation-link active_link">Мастера</a>
                 <a href="../sign-up-page/sign-up.html" class="header__navigation-link link">Запись</a>
                 <a href="../contacts-page/contacts.html" class="header__navigation-link link">Контакты</a>
-                <a href="#" class="header__navigation-link link">Профиль</a>
+                <a href="../profile-page/profile.html" class="header__navigation-link link">Профиль</a>
             </nav>
             <div class="header__login-container">
                 <a href="../authorization-pages/login.html" class="header__login link">Войти</a>
@@ -278,6 +278,6 @@
         </div>
     </div>
     </div>
-    <script src="../../scripts/modal.js"></script>
+    <script src="../../scripts/mastersModal.js"></script>
     <script src="../../scripts/headerBar.js"></script>
 </body>
