--- a/html/profile-page/profile.html
+++ b/html/profile-page/profile.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="../../styles/variables.css">
     <link rel="stylesheet" href="../../styles/global.css">
     <link rel="stylesheet" href="../../styles/header__bar/header__bar.css">
+    <link rel="stylesheet" href="../../styles/buttons/buttons.css">
     <link rel="stylesheet" href="../../styles/footer/footer.css">
-    <link rel="stylesheet" href="../../styles/contacts-page/contacts-page.css">
-    <title>Контакты</title>
+    <link rel="stylesheet" href="../../styles/profile-page/profile.css">
+    <title>Профиль</title>
 </head>
 <body class="page">
     <div class="overlay"></div>
@@ -28,45 +29,27 @@
                     <a href="../services-page/services.html" class="header__navigation-link link">Услуги</a>
                     <a href="../masters-page/masters.html" class="header__navigation-link link">Мастера</a>
                     <a href="../sign-up-page/sign-up.html" class="header__navigation-link link">Запись</a>
-                    <a href="#" class="header__navigation-link active_link">Контакты</a>
-                    <a href="../profile-page/profile.html" class="header__navigation-link link">Профиль</a>
+                    <a href="../contacts-page/contacts.html" class="header__navigation-link link">Контакты</a>
+                    <a href="#" class="header__navigation-link active_link">Профиль</a>
                 </nav>
                 <div class="header__login-container">
                     <a href="../authorization-pages/login.html" class="header__login link">Войти</a>
                 </div>
             </div>
         </header>
-        <main>
-            <section class="main__content">
-                <article class="main__contacts">
-                    <h1 class="main__title">Контакты</h1>
-                    <a href="#" class="main__phone-nuber link link--black">+ 7 (927) 77-77-777</a>
-                    <a href="#" class="link link--black">ИП XXXXXX</a>
-                    <a href="#" class="link link--black">ИНН XXXXXXXXXXXX</a>
-                    <a href="#" class="link link--black">ОГРНИП XXXXXXXXXXXXXXX</a>
-                    <a href="#" class="link link--black">Самарская обл., г. Тольятти, ул. XXXXXX, д.X</a>
-                </article>
-                <div class="main__map-container">
-                    <!-- <iframe
-                        class="map"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2370.9711372542943!2d49.33564327663167!3d53.54042957234618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x41687852e2c5d29b%3A0x5f4b7f2625d1805a!2z0JXQu9C10L3QsCwg0YHQsNC70L7QvS3Qv9Cw0YDQuNC60LzQsNGF0LXRgNGB0LrQsNGP!5e0!3m2!1sru!2sru!4v1711290388337!5m2!1sru!2sru"
-                        width="100%"
-                        height="100%"
-                        allowfullscreen=""
-                        loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">
-                    </iframe> -->
-                    <iframe
-                        class="map"
-                        src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1185.5856369181686!2d49.33648439742661!3d53.536856015615065!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1711291259794!5m2!1sru!2sru"
-                        width="100%"
-                        height="100%"
-                        allowfullscreen=""
-                        loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">
-                    </iframe>
+        <main class="main">
+            <div class="profile__wrapper">
+                <p class="profile__title">Профиль</p>
+                <div class="profile__info_main">
+                    <img class="profile__image" src="../../images/haircut.webp" alt="Фото профиля" loading="lazy">
+                    <p class="profile__name">Алиса</p>
                 </div>
-            </section>
+                <div class="profile__info_additional">
+                    <p class="profile__email profile__info-item">example@gmail.com</p>
+                    <p class="profile__login profile__info-item">AliceInWonderland</p>
+                    <button class="profile__button link-type-button link-type-button--transparent">Редактировать профиль</button>
+                </div>
+            </div>
         </main>
         <footer class="footer">
             <address class="footer__addres">
@@ -97,5 +80,30 @@
             </ul>
         </footer>
     </div>
+    <div class="popup popup_is-animated popup-type-profile">
+        <div class="popup__editor">
+            <button class="popup_close-button"></button>
+            <form class="popup__form">
+                <div class="popup__input-container">
+                    <label class="popup__label" for="name" name="name">Введите имя</label>
+                    <input class="popup__input" type="text" placeholder="Ваше имя" id="name">
+                </div>
+                <div class="popup__input-container">
+                    <label class="popup__label" for="login" name="login">Введите логин</label>
+                    <input class="popup__input" type="text" placeholder="Ваш логин" id="login">
+                </div>
+                <div class="popup__input-container">
+                    <label class="popup__label" for="email" name="email">Введите почту</label>
+                    <input class="popup__input" type="email" placeholder="Ваша почта" id="email">
+                </div>
+                <!-- <div class="popup__input-container">
+                    <label class="popup__label" for="logo" name="logo">Вставьте ссылку на фото</label>
+                    <input class="popup__input" type="url" placeholder="Ссылка на фото" id="logo">
+                </div> -->
+                <button type="submit" class="popup__form__button link-type-button link-type-button--transparent">Сохранить</button>
+            </form>
+        </div>
+    </div>
+    <script src="../../scripts/profileModal.js"></script>
     <script src="../../scripts/headerBar.js"></script>
 </body>
