--- a/html/services-page/services.html
+++ b/html/services-page/services.html
@@ -27,7 +27,7 @@
             <a href="../masters-page/masters.html" class="header__navigation-link link">Мастера</a>
             <a href="../sign-up-page/sign-up.html" class="header__navigation-link link">Запись</a>
             <a href="../contacts-page/contacts.html" class="header__navigation-link link">Контакты</a>
-            <a href="#" class="header__navigation-link link">Профиль</a>
+            <a href="../profile-page/profile.html" class="header__navigation-link link">Профиль</a>
         </nav>
         <div class="header__login-container">
             <a href="../authorization-pages/login.html" class="header__login link">Войти</a>
