--- a/html/authorization-pages/registration.html
+++ b/html/authorization-pages/registration.html
@@ -14,6 +14,7 @@
     <div class="overlay"></div>
     <div class="overlay-content authorization-window">
         <article class="window">
+            <a href="../main-page/main.html" class="exit-button" aria-hidden="true"></a>
             <h1 class="title">Регистрация</h1>
             <form class="form" method="post" autocomplete="off">
                 <label class="input-label">
